<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:orientation="horizontal" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/row_addr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/address"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/row_major"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/major"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/row_minor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minor"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/row_UUID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/uuid"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/row_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/number"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/row_saved"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:text="@string/saved"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />
    </LinearLayout>

    <ImageView
        android:id="@+id/row_color"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="20dp"
        android:background="@android:color/holo_purple" />

</LinearLayout>