<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="sk.svb.ibeacon.heatmap.activity.MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_text_margin"
            android:drawableLeft="@android:drawable/ic_menu_preferences"
            android:drawablePadding="10dp"
            android:onClick="setupIBeacons"
            android:text="@string/setup_beacons" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_media_play"
            android:onClick="showBeacons"
            android:text="@string/generate_heatmap" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_text_margin"
            android:text="@string/app_method_title"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <Spinner
            android:id="@+id/acc_method"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/accuracy_type" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/my_text_margin"
            android:text="@string/room_size"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="1" >

            <EditText
                android:id="@+id/room_width"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="number"
                android:text="5" >
            </EditText>

            <EditText
                android:id="@+id/room_height"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:ems="10"
                android:inputType="number"
                android:text="6" >
            </EditText>
        </LinearLayout>
    </LinearLayout>

</ScrollView>